--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -20,6 +20,11 @@
     "node-sass": "^4.3.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.2"
   },
   "devDependencies": {
