--- a/src/main/ui/.babelrc
+++ b/src/main/ui/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": ["es2015", "react", "stage-1"],
   "plugins": ['transform-runtime', 'transform-decorators-legacy', 'transform-class-properties', 'react-hot-loader/babel']
 }
