--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
   "dependencies": {
+    "moment": "^2.18.1",
     "node-sass": "^4.3.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
@@ -25,6 +26,7 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "rxjs": "^5.4.0",
     "sass-loader": "^6.0.2"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.22.0",
     "css-loader": "0.26.1",
     "extract-text-webpack-plugin": "^v2.0.0-rc.1",
